# compliant-b2b-outreach-automation

./: .env.example  .gitignore  CODEX.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: bootstrap-docs.yml  ci.yml  daily.yml
data/: campaign-body.example.txt  seeds.txt
docs/: README.template.md  architecture.md  oss-evaluation.md  setup.md
src/outreach_bot/: __init__.py  api.py  cli.py  config.py  crawler.py  db.py  extract.py  forms.py  mailer.py  models.py  policy.py  service.py
tests/: test_api.py  test_extract.py  test_policy.py
